--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.19.1",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
+    "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
